# framework.system.libstorage

./: CMakeLists.txt  storage.pc.in
include/: common.h  storage-expand.h  storage.h
packaging/: libstorage.spec
src/: statvfs.c  storage.c
test/: config  storage.c
test/testcase/: Makefile  tslist  utc_system_storage.c
